# internal/pkg/api/api.go
@@ -152,6 +152,9 @@ func New(d *db.DB, gd *geonamesdb.DB, fd *forecastdb.DB, sessions *session.Store
 		r.Get("/admin/segments/junctions", sv.handleListSegmentJunctions)
 
 		r.Get("/admin/forecasts", sv.handleAdminListForecasts)
+
+		r.Get("/admin/maps", sv.handleAdminListMapBuilds)
+		r.Post("/admin/maps/{uuid}/mark-for-deletion", sv.handleAdminMarkMapForDeletion)
 	})
 
 	return mux, nil
